--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "buildCommand": "node ace build --production && cd build && npm install --production ",
+  "startCommand": "node server.js",
   "devCommand": "node ace serve --watch",
   "framework": null,
   "outputDirectory": "build"
