--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
   "outputDirectory": "build",
   "builds": [
     {
-      "src": "server.js"
+      "src": "server.js",
+      "use": "@now/node"
     }
   ]
 }
